fix: Added color for dark mode in accordion and menu links

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,10 +11,14 @@
 .dark-mode {
 	--text-color: var(--white);
 	--bg-color: var(--dark-blue);
+
+	--bg-code: rgb(20, 27, 77);
 }
 .light-mode {
 	--text-color: var(--dark-blue);
 	--bg-color: var(var(--light-grey));
+
+	--bg-code: #FBF7EC;
 }
 body{
 	font-family: 'Fira Sans', sans-serif;
@@ -23,7 +27,11 @@ body,
 .container-fluid,
 .current-color {
 	background-color: var(--bg-color);
-	color: var(--text-color) ;
+	color: var(--text-color) !important;
+}
+.navbar-toggler-icon {
+	display: block;
+	padding: 1rem;
 }
 .contenedor{
 	width: 50%;
@@ -32,20 +40,26 @@ body,
 .code{
 	display: block;
 	position: relative; /* Para posicionar el pseudoelemento */
-	background: #FBF7EC;
+	background: var(--bg-code);
 	padding: 15px;
 	font-size: 90%;
+	border-radius: 10px;
 }
 .code::before {
 	--textContent: 'Copiar';
 	content: var(--textContent);
+	display: grid;
+	place-items: center;
 	position: absolute;
 	top: 0;
 	right: 0;
-	padding: .25em .5em;
+	bottom: 0;
+	padding: 0 .8em;
 	font-size: 80%;
 	border: 1px solid;
 	cursor: pointer;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 .code.copied::before {
 	--textContent: 'Copiado';
@@ -95,6 +109,15 @@ h3{
 }
 .icon-theme:hover {
 	background-color: rgba(0,0,0,.05);
+}
+
+.dark-mode .accordion-header > .accordion-button{
+	background-color: rgb(20, 27, 77);
+	color: var(--text-color);
+}
+.dark-mode .accordion-item {
+	background-color: rgb(21, 24, 56);
+	color: var(--text-color);
 }
 
 /* Small devices (landscape phones, less than 768px)*/
